feat: config file, forgot password, resetpassword
